--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - name: worker
-          image: hazelnut95/multi-worker
-          env: 
+          image: stephengrider/multi-worker
+          env:
             - name: REDIS_HOST
               value: redis-cluster-ip-service
             - name: REDIS_PORT
